# yunikEngine-depricated

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/yunikEngine/: CMakeLists.txt  audio.hpp  camera.hpp  math.hpp  projectManager.hpp  scene.hpp  shader.hpp  window.hpp
tests/: CMakeLists.txt  windowTest.cpp
yunikEngine/: projectmanager.hpp  window.hpp
