CMAKE_MINIMUM_REQUIRED (VERSION 3.9)

SET (CMAKE_CXX_STANDARD 17)

PROJECT ("YUNIKENGINE")

SET (YUNIKENGINE_TARGET yunikEngine)

############################ Compile options ###################################

OPTION (YUNIKENGINE_BUILD_TESTS "Build the test programs" OFF)

############################## SUBMODULES ######################################

SET (YUNIKENGINE_SUBMODULES_DIR ${PROJECT_SOURCE_DIR}/submodules)

# OpenGL
FIND_PACKAGE (OpenGL REQUIRED)
INCLUDE_DIRECTORIES (${OPENGL_INCLUDE_DIRS})

# GLFW3
SET (GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET (GLFW_INSTALL OFF CACHE BOOL "" FORCE)
ADD_SUBDIRECTORY (${YUNIKENGINE_SUBMODULES_DIR}/glfw glfw EXCLUDE_FROM_ALL)

# GLEW
SET (GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
ADD_SUBDIRECTORY (${YUNIKENGINE_SUBMODULES_DIR}/glew/build/cmake glew EXCLUDE_FROM_ALL)
INCLUDE_DIRECTORIES (${YUNIKENGINE_SUBMODULES_DIR}/glew/include)

# OpenAL

# stb
INCLUDE_DIRECTORIES (${YUNIKENGINE_SUBMODULES_DIR}/stb)

################################################################################

ADD_SUBDIRECTORY (yunikEngine EXCLUDE_FROM_ALL)

TARGET_LINK_LIBRARIES (${YUNIKENGINE_TARGET}
    ${OPENGL_LIBRARIES}
    glfw
    glew_s
)
