CMAKE_MINIMUM_REQUIRED (VERSION 3.13)

SET (CMAKE_CXX_STANDARD 17)

PROJECT ("YUNIKENGINE")

############################ Compile options ###################################

OPTION (YUNIKENGINE_BUILD_TESTS "Build the test programs" ON)

############################## SUBMODULES ######################################

SET (YUNIKENGINE_SUBMODULES_DIR ${PROJECT_SOURCE_DIR}/submodules)

# OpenGL
FIND_PACKAGE (OpenGL REQUIRED)
INCLUDE_DIRECTORIES (${OPENGL_INCLUDE_DIRS})

# GLFW3
SET (GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET (GLFW_INSTALL OFF CACHE BOOL "" FORCE)
ADD_SUBDIRECTORY (${YUNIKENGINE_SUBMODULES_DIR}/glfw glfw EXCLUDE_FROM_ALL)

# GLEW
SET (GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
ADD_SUBDIRECTORY (${YUNIKENGINE_SUBMODULES_DIR}/glew/build/cmake glew EXCLUDE_FROM_ALL)
INCLUDE_DIRECTORIES (${YUNIKENGINE_SUBMODULES_DIR}/glew/include)

# OpenAL

# stb
INCLUDE_DIRECTORIES (${YUNIKENGINE_SUBMODULES_DIR}/stb)

########################### Generate Library ###################################

ADD_SUBDIRECTORY (include/yunikEngine)

############################## Build Test ######################################

IF (YUNIKENGINE_BUILD_TESTS)
    ADD_SUBDIRECTORY (tests)
ENDIF ()
