CMAKE_MINIMUM_REQUIRED (VERSION 3.13)

SET (CMAKE_CXX_STANDARD 14)

PROJECT ("YUNIKENGINE")

SET (YUNIKENGINE yunikEngine)

########################### Add Library Files ##################################

FILE (GLOB_RECURSE YUNIKENGINE_HPP_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
ADD_LIBRARY (YUNIKENGINE STATIC
    ${YUNIKENGINE_HPP_FILES}
)

############################## SUBMODULES ######################################

SET (YUNIKENGINE_SUBMODULES_DIR ${PROJECT_SOURCE_DIR}/submodules)

# OpenGL
FIND_PACKAGE (OpenGL REQUIRED)
INCLUDE_DIRECTORIES (${OPENGL_INCLUDE_DIRS})

# GLFW3
SET (GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET (GLFW_INSTALL OFF CACHE BOOL "" FORCE)
ADD_SUBDIRECTORY (${YUNIKENGINE_SUBMODULES_DIR}/glfw glfw EXCLUDE_FROM_ALL)

# GLEW
SET (GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
ADD_SUBDIRECTORY (${YUNIKENGINE_SUBMODULES_DIR}/glew/build/cmake glew EXCLUDE_FROM_ALL)
TARGET_INCLUDE_DIRECTORIES (YUNIKENGINE PUBLIC ${YUNIKENGINE_SUBMODULES_DIR}/glew/include)

# GLM
SET (GLM_TEST_ENABLE OFF CACHE BOOL "" FORCE)
ADD_SUBDIRECTORY (${YUNIKENGINE_SUBMODULES_DIR}/glm glm EXCLUDE_FROM_ALL)

# OpenAL
SET (ALSOFT_DLOPEN OFF CACHE BOOL "" FORCE)
SET (ALSOFT_UTILS OFF CACHE BOOL "" FORCE)
SET (ALSOFT_EXAMPLES OFF CACHE BOOL "" FORCE)
SET (ALSOFT_TESTS OFF CACHE BOOL "" FORCE)
SET (ALSOFT_CONFIG OFF CACHE BOOL "" FORCE)
SET (ALSOFT_HRTF_DEFS OFF CACHE BOOL "" FORCE)
SET (ALSOFT_AMBDEC_PRESETS OFF CACHE BOOL "" FORCE)
SET (ALSOFT_INSTALL OFF CACHE BOOL "" FORCE)
ADD_SUBDIRECTORY (${YUNIKENGINE_SUBMODULES_DIR}/openal openal EXCLUDE_FROM_ALL)
TARGET_INCLUDE_DIRECTORIES (YUNIKENGINE PUBLIC ${YUNIKENGINE_SUBMODULES_DIR}/openal/include)

# stb
TARGET_INCLUDE_DIRECTORIES (YUNIKENGINE PUBLIC ${YUNIKENGINE_SUBMODULES_DIR}/stb)

########################### Generate Library ###################################

SET_TARGET_PROPERTIES (YUNIKENGINE PROPERTIES LINKER_LANGUAGE CXX)

TARGET_LINK_LIBRARIES (YUNIKENGINE
    ${OPENGL_LIBRARIES}
    glfw
    glew_s
    glm
    OpenAL
)
