SET (YUNIKENGINE yunikEngine)
FILE (GLOB_RECURSE YUNIKENGINE_HPP_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

ADD_LIBRARY (YUNIKENGINE
    ${YUNIKENGINE_HPP_FILES}
)

SET_TARGET_PROPERTIES (YUNIKENGINE PROPERTIES LINKER_LANGUAGE CXX)

TARGET_LINK_LIBRARIES (YUNIKENGINE
    ${OPENGL_LIBRARIES}
    glfw
    glew_s
)
